<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Deal Browser</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <!--  Content Description  -->
  <string name="product_image_content_description">Product Image</string>
  <string name="product_title_content_description">Product Title</string>
  <string name="product_price_content_description">Product Price</string>
  <string name="product_aisle_content_description">Product Aisle</string>
  <string name="product_sales_price_content_description">Product Sales Price</string>
  <string name="product_regular_price_content_description">Product Regular Price</string>
  <string name="product_add_to_list_content_description">Add Product To List</string>
  <string name="product_add_to_cart_content_description">Add Product To Cart</string>

  <!--  Deals  -->
  <string name="deals_title">Deals</string>
  <string name="deal_ship">ship</string>
  <string name="deal_or">or</string>
  <string name="deals_get_not_found">No deals at this time!</string>
  <string name="deals_get_unknown_error">Unknown error - unable to get deals at this moment!</string>

  <string name="deal_details_title">Details</string>
  <string name="deals_details_reg_label">Reg: </string>
  <string name="deals_details_add_to_list">add to list</string>
  <string name="deals_details_add_to_cart">add to cart</string>
  <string name="deal_details_get_not_found">Unable to find deal!</string>
  <string name="deal_details_get_unknown_error">Unknown error - unable to get deal info at this moment!</string>
</resources>
