<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/deal_image_view"
        android:layout_width="@dimen/deal_list_item_image_size"
        android:layout_height="@dimen/deal_list_item_image_size"
        android:layout_margin="@dimen/padding_margin"
        android:contentDescription="@string/product_image_content_description"
        tools:src="@drawable/ic_error_outline_24dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_title_content_description"
            android:textSize="@dimen/h5"
            android:textColor="@color/default_font"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/deal_divider"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Product Title"/>

        <View
            android:id="@+id/deal_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/subtle_contrast_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/deal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_price_content_description"
            android:textSize="@dimen/h5"
            android:textColor="@color/default_font"
            app:layout_constraintTop_toTopOf="@id/deal_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="$9.00"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/padding_margin"
            android:layout_marginEnd="@dimen/padding_margin"
            app:layout_constraintTop_toTopOf="@id/deal_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/deal_ship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_1"
                android:textColor="@color/default_font"
                android:text="@string/deal_ship" />

            <TextView
                android:id="@+id/deal_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_margin_quarter"
                android:layout_marginStart="@dimen/padding_margin_quarter"
                android:layout_marginRight="@dimen/padding_margin_quarter"
                android:layout_marginEnd="@dimen/padding_margin_quarter"
                android:textSize="@dimen/body_1"
                android:textColor="@color/subtle_contrast_font"
                android:text="@string/deal_or" />

            <TextView
                android:id="@+id/deal_store_aisle"
                android:layout_width="@dimen/padding_margin_2x"
                android:layout_height="@dimen/padding_margin_2x"
                android:textSize="@dimen/body_1"
                android:textColor="@color/target_red_font"
                android:gravity="center"
                android:background="@drawable/bg_outline_circle"
                android:contentDescription="@string/product_aisle_content_description"
                tools:text="B2" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>